2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* pbx.c (handle_show_hints): use proper state-to-string function for hint state (issue #5583)

	* rtp.c: use unsigned format for debug packet output (issue #5595)

	* asterisk.c (main): force a dnsmgr background refresh after all other modules are initialized (issue #5599)
	* dnsmgr.c: add ability to start a background refresh on demand (issue #5599)

	* apps/app_dial.c (HANDLE_CAUSE): set CDR disposition to match cause code (issue #5602)

	* asterisk.c: support 'runuser' and 'rungroup' options in asterisk.conf (issue #5621)

	* res/Makefile, apps/Makefile, channels/Makefile, Makefile: support WITHOUT_ZAPTEL define to forcibly avoid building Zaptel support (issue #5634)

	* Makefile: various fixes (issue #5633)

	* apps/app_osplookup.c: upgrade to new arg/option API and implement priority jumping control

	* channels/chan_misdn.c: various fixes (issue #5639)
	* channels/misdn/isdn_lib.c: various fixes (issue #5639)

	* apps/app_playback.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_privacy.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_sendtext.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_transfer.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_txtcidname.c: upgrade to new arg/option API and implement priority jumping control

	* Makefile: restore function of 'dont-optimize'

	* config.c (config_text_file_load): don't generate log message when stat() fails

	* many files: clean up application documentation to not refer to return values, since they cannot be used in the dialplan (work done by Neil Lewis)

2005-11-06  Russell Bryant <russell@digium.com>

	* many files: alphabetize options in applicaiton descriptions